--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="trCE60o_yc6firsH1ASrysbXeKPOihaBw_JnyACy6uk" />
     <title>Put the Portals</title>
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -192,7 +193,7 @@
                     <a href="./terms&privacy.html">
                         <i class="fas fa-globe-americas icons"></i>
                         <div class="footer-nomes">
-                            Política de privacidade
+                            Privacy policy
                         </div>
                     </a>
                 </div>
